service-mesh/request_timeouts_retries/virtual_service_timeout.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
spec:
  hosts:
  - httpbin
  http:
  - timeout: 5s
    route:
    - destination:
        host: httpbin
        port:
          number: 8000
